--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tomtom-international/web-sdk-maps": "^5.36.1",
+    "@tomtom-international/web-sdk-services": "^5.36.1",
     "here-datalens-api": "^1.0.3",
     "nativescript-directions": "^1.3.1",
     "react": "^16.9.0",
@@ -11,7 +13,7 @@
     "react-scripts": "3.1.2"
   },
   "scripts": {
-    "start": "NODE_PATH=./web react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -31,8 +33,7 @@
       "last 1 safari version"
     ]
   },
-    "engines": {
+  "engines": {
     "node": "v8.10.0"
   }
-
 }
