--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tomtom-international/web-sdk-maps": "^5.36.1",
-    "@tomtom-international/web-sdk-services": "^5.36.1",
-    "here-datalens-api": "^1.0.3",
     "nativescript-directions": "^1.3.1",
+    "rc-here-maps": "^1.1.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-intl": "^3.3.2",
     "react-native-maps-directions": "^1.7.0",
-    "react-scripts": "3.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.1.2",
+    "react-simple-maps": "^0.12.1"
   },
   "scripts": {
     "start": "react-scripts start",
