se agrega todas las modificacion

--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^12.12.7",
     "nativescript-directions": "^1.3.1",
     "rc-here-maps": "^1.1.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-intl": "^3.3.2",
-    "react-native-maps-directions": "^1.7.0",
+    "react-intl": "^3.6.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2",
-    "react-simple-maps": "^0.12.1"
+    "react-scripts": "3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +35,9 @@
   },
   "engines": {
     "node": "v8.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.16.0"
   }
 }
