--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@types/node": "^12.12.7",
+    "firebase": "^7.3.0",
     "nativescript-directions": "^1.3.1",
     "rc-here-maps": "^1.1.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-intl": "^3.6.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "reactfire": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
